--- a/packages/create-bun-hbs/package.json
+++ b/packages/create-bun-hbs/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "bun run build.js",
-    "dev": "bun run dev.js"
+    "dev": "bun run --hot dev.js"
   },
   "packageManager": "bun@1.2.23",
   "repository": {
