build: change name

--- a/packages/bun-plugin-hbs/package.json
+++ b/packages/bun-plugin-hbs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bun-plugin-handlebars",
+  "name": "bun-plugin-hbs",
   "version": "0.1.0",
   "type": "module",
   "module": "src/index.ts",
@@ -10,8 +10,8 @@
   "packageManager": "bun@1.2.23",
   "repository": {
     "type": "git",
-    "directory": "packages/bun-plugin-handlebars",
-    "url": "https://github.com/Omikorin/bun-plugin-handlebars.git"
+    "directory": "packages/bun-plugin-hbs",
+    "url": "https://github.com/Omikorin/bun-plugin-hbs.git"
   },
   "author": "Michał Korczak (https://omikor.in)",
   "license": "ISC",
