--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "author": "Michał Korczak (https://omikor.in)",
   "license": "ISC",
-  "devDependencies": {
+  "catalog": {
     "@biomejs/biome": "^2.2.5",
-    "@types/bun": "^1.2.23"
+    "@types/bun": "^1.2.23",
+    "handlebars": "^4.7.8"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "catalog:",
+    "@types/bun": "catalog:"
   }
 }
